@@ -2,6 +2,7 @@
 ---
 * Added Basque (EU) localization
 * Fixed issue #127 - Finnish translations has one : instead of ;
+* Added in support for HTML 5 input types, fixes #97
 
 1.8.1
 ---
